--- a/config/config.ini
+++ b/config/config.ini
@@ -2,7 +2,7 @@
 submission_s1_path = /test_s1/submission_s1_.csv
 
 [train_s1]
-course_path = /train_s1/cource.csv
+course_path = /train_s1/course.csv
 student_path = /train_s1/student.csv
 exam_score_path = /train_s1/exam_score.csv
 all_knowledge_path = /train_s1/all_knowledge.csv
