--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 [test_s1]
-submission_s1_path = /test_s1/submission_s1_.csv
+submission_s1_path = /test_s1/submission_s1.csv
 
 [train_s1]
 course_path = /train_s1/course.csv
