--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,9 @@
 [test_s1]
 submission_s1_path = /test_s1/submission_s1.csv
+submission_s1_sample_mean_median_path = /test_s1/submission_s1_sample_mean_median.csv
+submission_s1_sample_svm_path = /test_s1/submission_s1_sample_svm.csv
+submission_s1_sample_xgb_path = /test_s1/submission_s1_sample_xgb.csv
+submission_s1_sample_lgb_path = /test_s1/submission_s1_sample_lgb.csv
 
 [train_s1]
 course_path = /train_s1/course.csv
