--- a/config/config.ini
+++ b/config/config.ini
@@ -5,6 +5,8 @@ submission_s1_sample_svm_path = /test_s1/submission_s1_sample_svm.csv
 submission_s1_sample_xgb_path = /test_s1/submission_s1_sample_xgb.csv
 submission_s1_sample_lgb_path = /test_s1/submission_s1_sample_lgb.csv
 
+submission_s1_sample_mean_median1_path = /test_s1/submission_s1_sample_mean_median1.csv
+
 [train_s1]
 course_path = /train_s1/course.csv
 student_path = /train_s1/student.csv
