--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,6 @@
 [test_s1]
 submission_s1_path = /test_s1/submission_s1.csv
+submission_s1_sample_stack_path = /test_s1/submission_s1_sample_stack.csv
 submission_s1_sample_mean_median_path = /test_s1/submission_s1_sample_mean_median.csv
 submission_s1_sample_svm_path = /test_s1/submission_s1_sample_svm.csv
 submission_s1_sample_xgb_path = /test_s1/submission_s1_sample_xgb.csv
