--- a/config/config.ini
+++ b/config/config.ini
@@ -6,6 +6,7 @@ submission_s1_sample_svm_path = /test_s1/submission_s1_sample_svm.csv
 submission_s1_sample_xgb_path = /test_s1/submission_s1_sample_xgb.csv
 submission_s1_sample_lgb_path = /test_s1/submission_s1_sample_lgb.csv
 submission_s1_sample_baseline_path = /test_s1/submission_s1_sample_baseline.csv
+submission_s1_sample_baseline_1_path = /test_s1/submission_s1_sample_baseline_1.csv
 
 submission_s1_sample_mean_median1_path = /test_s1/submission_s1_sample_mean_median1.csv
 
